Add API for create category
