# routes/categories.js
@@ -9,5 +9,6 @@ const {validate} = require("../validates/validate.category")
 
 router.get("/",auth, categoryController.getCategories)
 router.get("/:categoryId", auth ,validate.getDetailCategory(), categoryController.getCardsInCategory)
+router.post("/", auth, validate.create(), categoryController.createCategory)
 
 module.exports = router
